[gd_scene load_steps=7 format=2]

[ext_resource path="res://Blocks/Joints/PinBlock.tscn" type="PackedScene" id=1]
[ext_resource path="res://Blocks/Joints/MotorBlock.gd" type="Script" id=2]
[ext_resource path="res://BlockSystems/IOPorts/IOPort.tscn" type="PackedScene" id=3]
[ext_resource path="res://Blocks/BlockSizeHelper.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/BlockPopup.tscn" type="PackedScene" id=5]
[ext_resource path="res://Ships/pin_head_systems/pin_head_systems.tres" type="Resource" id=6]

[node name="MotorBlock" instance=ExtResource( 1 )]
script = ExtResource( 2 )
description = "For building machines - input throttle at top port, reverse throttle at bottom port"
class_type = "MotorBlock"
display_name = "Rotator"
port_manager_path = NodePath("BlockSystems/PortManager")
default_subShip_resource = ExtResource( 6 )
torque_impulse = 50000

[node name="ThrottlePort" parent="BlockSystems/PortManager" index="0"]
position = Vector2( 0, -18.73 )
port_display_name = "FORWARDS"

[node name="ReversePort" parent="BlockSystems/PortManager" index="1" instance=ExtResource( 3 )]
position = Vector2( 0, 16.0543 )
port_display_name = "REVERSE"
is_input = true

[node name="SizeHelper" parent="." index="4" instance=ExtResource( 4 )]
tile_data = PoolIntArray( 0, 0, 0 )

[node name="BlockPopup" parent="." index="5" instance=ExtResource( 5 )]
